# multi-agent-debate

./: .gitignore  OPENROUTER.md  README.md  SETUP_GUIDE.md  cli.py  diagnose.py  diagnose_results.json  pyproject.toml  requirements.txt
agents/: __init__.py  base.py  critic.py  fact_checker.py  judge.py  llm_provider.py  moderator.py  proposer.py
config/: default.yaml  experiment.yaml  openrouter.yaml  simple_anthropic.yaml  simple_cohere.yaml  simple_openai.yaml
data/: __init__.py  database.py  models.py
evaluation/: __init__.py  metrics.py  validators.py
experiments/: __init__.py  benchmark.py
orchestration/: __init__.py  debate_manager.py  protocols.py
tests/: conftest.py  test_agents.py  test_cli.py  test_database.py  test_debate_manager.py  test_llm_provider.py  test_metrics.py  test_protocols.py  test_validators.py  test_visualization.py
viz/: __init__.py  visualize.py
